fixed visibility of mobile nav toggle, dropdown overlay visibility fix

--- a/base/_typography.scss
+++ b/base/_typography.scss
@@ -1,4 +1,5 @@
 body {
+    background: #fff;
     color: $base-font-color;
     font-family: $base-font-family;
     font-feature-settings: "kern", "liga", "pnum";
